--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>📄 Image to PDF Converter</h1>
-        <p>Upload images and convert them into a single PDF file.</p>
+        <p>Upload images, remove unwanted ones, and convert them into a centered PDF.</p>
 
         <div class="upload-area" id="uploadArea">
             <p>Drag & Drop images here or click to select</p>
@@ -21,7 +21,9 @@
         <button id="convertBtn">Convert to PDF</button>
     </div>
 
+    <!-- jsPDF Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
+
